--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 		
 		<link rel="stylesheet" type="text/css" href="vendors/bootstrap/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="vendors/ng-table/ng-table.min.css">		
+		<link rel="stylesheet" type="text/css" href="vendors/animate.css/animate.min.css">		
 		
 		<!-- Custom Theme Style -->
 		<link rel="stylesheet" type="text/css" href="css/custom.min.css">		
@@ -22,9 +23,8 @@
 					</p>
 		  			<ul class="list-inline panel-actions">
 						<li>
-							<a href="" role="button" aria-label="Reset" title="Reset Interface" ng-click="doReset()">
-							  <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
-							</a>
+							<button class="btn btn-danger btn-xs" ng-click="doReset()"><span class="glyphicon glyphicon-refresh"></span> Reset</button>	
+							
 						</li>
 		  			</ul>
 				</div>
@@ -77,5 +77,7 @@
 		<!-- Custom Scripts -->
 		<script type="text/javascript" src="js/deps.min.js"></script>
 		<script type="text/javascript" src="js/app.min.js"></script>
+		
+		<!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js"></script>-->
 	</body>
 </html>
