--- a/src/index.html
+++ b/src/index.html
@@ -45,15 +45,16 @@
 				<sidebar></sidebar>
 			</div>
 				-->
+			<div class="col-md-12" ng-hide="!data.length" class="flipin flipout">
+				<logtable></logtable>
+			</div>
 			
 			<div class="col-md-12">
 				<!-- contents where we'll paste log, drag n drop, or select + upload -->
 				<mainform ng-hide="data.length" class="flipin flipout"></mainform>
 			</div>
 			
-			<div class="col-md-12" ng-show="data.length" class="flipin flipout">
-				<logtable></logtable>
-			</div>
+			
 			
 			
 		</div>
