--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 	<head>
 		
 	    <meta charset="utf-8">
-	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	    <meta http-equiv="X-UA-Compatible" content="IE=edge;text/html; charset=utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 		<title ng:bind-template="{{getLocation()}}">Loading...</title>
 		
