Added much cleaner modal view of logs, click to inspect. Navigate left-right between messages using arrow keys.

--- a/dev/index.html
+++ b/dev/index.html
@@ -8,6 +8,7 @@
 		<title ng:bind-template="{{getLocation()}}">Loading...</title>
 		
 		<link rel="stylesheet" type="text/css" href="vendors/bootstrap/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="vendors/angular-ui-bootstrap/ui-bootstrap-csp.css">
 		<link rel="stylesheet" type="text/css" href="vendors/ng-table/ng-table.min.css">		
 		<link rel="stylesheet" type="text/css" href="vendors/animate.css/animate.min.css">		
 		
