Fixed horizontal scrolling from fluid layout

--- a/dev/index.html
+++ b/dev/index.html
@@ -46,7 +46,7 @@
 				<sidebar></sidebar>
 			</div>
 				-->
-			<div class="col-md-12" ng-hide="!data.length" class="flipin flipout">
+			<div class="" ng-hide="!data.length" class="flipin flipout" style="display:inline-block">
 				<logtable></logtable>
 			</div>
 			
