Alignment sorted on wider screens. Inspection view splits in two when screen is >= 1200px wide, else it stacks vertically to save horizontal space.

--- a/dev/index.html
+++ b/dev/index.html
@@ -16,7 +16,7 @@
 		<link rel="stylesheet" type="text/css" href="css/custom.min.css">		
 	</head>
 	<body>
-		<div class="container-fluid fill-height">
+		<div class="container-fluid fill-height mainContainer">
 			<div class="col-md-12">
 				<div class="page-header">
 					<p class="h3 text-center">MSTR Web Log Parser<br />
@@ -46,7 +46,7 @@
 				<sidebar></sidebar>
 			</div>
 				-->
-			<div class="" ng-hide="!data.length" class="flipin flipout" style="display:inline-block">
+			<div class="mainTableContainer" ng-hide="!data.length" class="flipin flipout">
 				<logtable></logtable>
 			</div>
 			
