--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 		  			<ul class="list-inline panel-actions">
 						<li>
 							<button class="btn btn-danger btn-xs" ng-click="doReset()"><span class="glyphicon glyphicon-refresh"></span> Reset</button>	
-							
+							<button class="btn btn-default btn-xs" ng-click="viewHelp()"><span class="glyphicon glyphicon-question-sign"></span></button>
 						</li>
 		  			</ul>
 				</div>
