Corrected interface update after parsing completes

--- a/dev/index.html
+++ b/dev/index.html
@@ -50,7 +50,7 @@
 				<logtable></logtable>
 			</div>
 			
-			<div class="col-md-12" ng-hide="data.length && parsing" class="flipin flipout">
+			<div class="col-md-12" ng-hide="data.length" class="flipin flipout">
 				<!-- contents where we'll paste log, drag n drop, or select + upload -->
 				<mainform></mainform>
 			</div>
