--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
 				<mainform></mainform>
 			</div>
             <div class="col-md-12" ng-show="parsing">
-                <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span> Parsing in progress...
+                <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span> Parsing in progress...processing {{data.length}} rows...
             </div>
 			
 			
