--- a/src/index.html
+++ b/src/index.html
@@ -78,6 +78,9 @@
 
 		<!-- NProgress -->
 		<script type="text/javascript" src="vendors/nprogress/nprogress.js"></script>
+	
+		<!-- colresizable -->
+		<script type="text/javascript" src="vendors/colresizable/colResizable-1.6.min.js"></script>
 				
 		<!-- Custom Scripts -->
 		<script type="text/javascript" src="js/deps.min.js"></script>
