--- a/src/index.html
+++ b/src/index.html
@@ -46,17 +46,20 @@
 				<sidebar></sidebar>
 			</div>
 				-->
-			<div class="mainTableContainer" ng-show="data.length && !parsing" class="flipin flipout">
-				<logtable></logtable>
+				
+            <div class="col-md-12" ng-show="isParsing()">
+                <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span> Parsing in progress...processing {{data.length}} rows...
+            </div>
+			
+			<div class="mainTableContainer" ng-show="data.length && !isParsing()" class="flipin flipout">
+				<logsweb></logsweb>
 			</div>
 			
 			<div class="col-md-12" ng-hide="data.length" class="flipin flipout">
 				<!-- contents where we'll paste log, drag n drop, or select + upload -->
-				<mainform></mainform>
+				<startform></startform>
 			</div>
-            <div class="col-md-12" ng-show="parsing">
-                <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span> Parsing in progress...processing {{data.length}} rows...
-            </div>
+
 			
 			
 			
