--- a/dev/index.html
+++ b/dev/index.html
@@ -19,22 +19,31 @@
 		<div class="container-fluid fill-height mainContainer">
 			<div class="col-md-12">
 				<div class="page-header">
-					<p class="h3 text-center">MSTR Web Log Parser<br />
-						<small>made with BootStrap &amp; AngularJS</small>
+					<p class="h3 text-center">MSTR Log Parser<br />
+						<small>for Web, Mobile &amp; Kernel XML API server logs</small>
 					</p>
 		  			<ul class="list-inline panel-actions">
 						<li>
-							<button class="btn btn-danger btn-xs" ng-click="doReset()"><span class="glyphicon glyphicon-refresh"></span> Reset</button>	
-							<button class="btn btn-default btn-xs" ng-click="viewHelp()"><span class="glyphicon glyphicon-question-sign"></span></button>
+							<button class="btn btn-danger btn-xs" ng-click="doReset()" title="Reset Parser"><span class="glyphicon glyphicon-refresh"></span> Reset</button>	
+							<div class="btn-group" role="group" aria-label="...">
+								<button class="btn btn-default btn-xs" ng-click="viewHelp()" title="Usage Info"><span class="glyphicon glyphicon-question-sign"></span></button>
+								<a href="https://github.com/tiagosiebler/MSTRWebLogParser" target="_blank" class="btn btn-default btn-xs" role="button" title="View Repository"><span class="glyphicon glyphicon-globe"></span></a>
+							</div>
 						</li>
 		  			</ul>
 				</div>
 			</div>
 			
-			<div class="col-md-12">
+			<div class="col-md-12 keepFront">
 				<!-- Notices -->
 				<br />
-				<div class="alert alert-danger alert-dismissible bouncein bounceout" role="alert" ng-show="hasError" title="Error status {{error.status}}" data-ng-click="hasError = null">
+				<div 
+					class="alert alert-dismissible bouncein bounceout"
+					ng-class="getErrorCSS(error.status)"
+					role="alert" 
+					ng-show="hasError" 
+					title="Error status {{error.status}}" 
+					data-ng-click="hasError = null">
 					<div>
 						<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
 						<strong>Error:</strong> {{error.message}} - {{error.cause}}
@@ -47,15 +56,16 @@
 			</div>
 				-->
 				
-            <div class="col-md-12" ng-show="isParsing()">
-                <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span> Parsing in progress...processing {{data.length}} rows...
+            <div class="col-md-12" ng-show="isParsing()" class="flipin flipout">
+                <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span> Parsing in progress...processing {{totalData}} rows...
             </div>
 			
-			<div class="mainTableContainer" ng-show="data.length && !isParsing()" class="flipin flipout">
+			<div class="mainTableContainer" ng-show="$root.totalData && !isParsing()" class="flipin flipout">
 				<logsweb></logsweb>
+				<logskernel></logskernel>
 			</div>
 			
-			<div class="col-md-12" ng-hide="data.length" class="flipin flipout">
+			<div class="col-md-12" ng-hide="$root.totalData" class="flipin flipout">
 				<!-- contents where we'll paste log, drag n drop, or select + upload -->
 				<startform></startform>
 			</div>
