--- a/dev/index.html
+++ b/dev/index.html
@@ -1,120 +1,106 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="myApp">
-	<head>
 
-	    <meta charset="utf-8">
-	    <meta http-equiv="X-UA-Compatible" content="IE=edge;text/html; charset=utf-8">
-	    <meta name="viewport" content="width=device-width, initial-scale=1">
-		<title ng:bind-template="{{getLocation()}}">Loading...</title>
+<head>
 
-		<link rel="stylesheet" type="text/css" href="vendors/bootstrap/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="vendors/angular-ui-bootstrap/ui-bootstrap-csp.css">
-		<link rel="stylesheet" type="text/css" href="vendors/ng-table/ng-table.min.css">
-		<link rel="stylesheet" type="text/css" href="vendors/animate.css/animate.min.css">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge;text/html; charset=utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title ng:bind-template="{{getLocation()}}">Loading...</title>
 
-		<!-- Custom Theme Style -->
-		<link rel="stylesheet" type="text/css" href="css/custom.min.css">
-	</head>
-	<body>
-		<div class="container-fluid fill-height mainContainer">
-			<div class="col-md-12">
-				<div class="page-header">
-					<p class="h3 text-center">MSTR Log Parser<br />
-						<small>for Web, Mobile &amp; Kernel XML API server logs</small>
-					</p>
-		  			<ul class="list-inline panel-actions">
-						<li>
-							<button class="btn btn-danger btn-xs" ng-click="doReset()" title="Reset Parser"><span class="glyphicon glyphicon-refresh"></span> Reset</button>
-						</li>
-						<li>
-							<div class="btn-group" role="group" aria-label="...">
-								<button class="btn btn-default btn-xs" ng-click="viewHelp()" title="Usage Info"><span class="glyphicon glyphicon-question-sign"></span></button>
-								<a href="https://github.com/tiagosiebler/MSTRWebLogParser" target="_blank" class="btn btn-default btn-xs" role="button" title="View Repository"><span class="glyphicon glyphicon-globe"></span></a>
-							</div>
-						</li>
-		  			</ul>
-				</div>
-			</div>
+  <link rel="stylesheet" type="text/css" href="vendors/bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="vendors/angular-ui-bootstrap/ui-bootstrap-csp.css">
+  <link rel="stylesheet" type="text/css" href="vendors/ng-table/ng-table.min.css">
+  <link rel="stylesheet" type="text/css" href="vendors/animate.css/animate.min.css">
 
-			<div class="col-md-12 keepFront">
-				<!-- Notices -->
-				<br />
-				<div
-					class="alert alert-dismissible bouncein bounceout"
-					ng-class="getErrorCSS(error.status)"
-					role="alert"
-					ng-show="hasError"
-					title="Error status {{error.status}}"
-					data-ng-click="hasError = null">
-					<div>
-						<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-						<strong>Error:</strong> {{error.message}} - {{error.cause}}
-					</div>
-				</div>
-			</div>
-			<!--
-			<div ng-class="authToken? 'col-md-2' : 'col-md-12'">
-				<sidebar></sidebar>
-			</div>
-				-->
+  <!-- Custom Theme Style -->
+  <link rel="stylesheet" type="text/css" href="css/custom.min.css">
+</head>
 
-            <div class="col-md-12" ng-show="isParsing()" class="flipin flipout">
-                <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span> Parsing in progress...processing {{totalData}} rows...
+<body>
+  <div class="container-fluid fill-height mainContainer">
+    <div class="col-md-12">
+      <div class="page-header">
+        <p class="h3 text-center">MicroStrategy Log Parser<br />
+          <small>for Web, Mobile &amp; Kernel XML API server logs</small>
+        </p>
+        <ul class="list-inline panel-actions">
+          <li>
+            <div class="btn-group" role="group" aria-label="...">
+              <a href="https://github.com/tiagosiebler/MSTRWebLogParser" target="_blank" class="btn btn-default btn-xs" role="button" title="View Repository"><span class="glyphicon glyphicon-globe"></span> GitHub</a>
+              <button class="btn btn-default btn-xs" ng-click="viewHelp()" title="Usage Info"><span class="glyphicon glyphicon-question-sign"></span> Help</button>
             </div>
+          </li>
+          <li>
+            <button class="btn btn-danger btn-xs" ng-click="doReset()" title="Reset Parser"><span class="glyphicon glyphicon-refresh"></span> Reset</button>
+          </li>
+        </ul>
+      </div>
+    </div>
 
-			<div class="mainTableContainer" ng-show="$root.totalData && !isParsing()" class="flipin flipout">
-				<div id="normalView" ng-if="dataset.logs.web.length == 0 || dataset.logs.kernel.length == 0">
-						<logsweb></logsweb>
-						<logskernel></logskernel>
-				</div>
-				<div id="tabbedView" ng-if="dataset.logs.web.length != 0 && dataset.logs.kernel.length != 0">
-					    <uib-tabset active="active">
-							<uib-tab heading="Web">
-								<logsweb></logsweb>
-							</uib-tab>
-							<uib-tab heading="Kernel XML API">
-								<logskernel></logskernel>
-							</uib-tab>
-					    </uib-tabset>
-				</div>
+    <div class="col-md-12 keepFront">
+      <!-- Notices -->
+      <br />
+      <div class="alert alert-dismissible bouncein bounceout" ng-class="getErrorCSS(error.status)" role="alert" ng-show="hasError" title="Error status {{error.status}}" data-ng-click="hasError = null">
+        <div>
+          <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+          <strong>Error:</strong> {{error.message}} - {{error.cause}}
+        </div>
+      </div>
+    </div>
+    <div class="col-md-12" ng-show="isParsing()" class="flipin flipout">
+      <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span> Parsing in progress...processing {{totalData}} rows...
+    </div>
 
+<!--  main table where logs will be shown -->
+    <div class="mainTableContainer" ng-show="$root.totalData && !isParsing()" class="flipin flipout">
+      <div id="normalView" ng-if="dataset.logs.web.length == 0 || dataset.logs.kernel.length == 0">
+        <logsweb></logsweb>
+        <logskernel></logskernel>
+      </div>
+      <div id="tabbedView" ng-if="dataset.logs.web.length != 0 && dataset.logs.kernel.length != 0">
+        <uib-tabset active="active">
+          <uib-tab heading="Web">
+            <logsweb></logsweb>
+          </uib-tab>
+          <uib-tab heading="Kernel XML API">
+            <logskernel></logskernel>
+          </uib-tab>
+        </uib-tabset>
+      </div>
+    </div>
+<!--  pastebox where logs can be pasted -->
+    <div class="col-md-12" ng-hide="$root.totalData" class="flipin flipout">
+      <!-- contents where we'll paste log, drag n drop, or select + upload -->
+      <startform></startform>
+    </div>
 
-			</div>
+  </div>
+  <!-- footer -->
+  <toaster-container toaster-options="{'time-out': 3000}"></toaster-container>
 
-			<div class="col-md-12" ng-hide="$root.totalData" class="flipin flipout">
-				<!-- contents where we'll paste log, drag n drop, or select + upload -->
-				<startform></startform>
-			</div>
+  <!-- jQuery -->
+  <script type="text/javascript" src="vendors/jquery/jquery.min.js"></script>
 
+  <!-- Bootstrap -->
+  <script type="text/javascript" src="vendors/bootstrap/bootstrap.min.js"></script>
 
+  <!-- AngularJS -->
+  <script type="text/javascript" src="vendors/angular/angular.min.js"></script>
+  <!-- Angular-Bootstrap -->
+  <script type="text/javascript" src="vendors/angular-ui-bootstrap/ui-bootstrap-tpls.js"></script>
 
+  <!-- NProgress -->
+  <script type="text/javascript" src="vendors/nprogress/nprogress.js"></script>
 
+  <!-- colresizable -->
+  <script type="text/javascript" src="vendors/colresizable/colResizable-1.6.min.js"></script>
 
-		</div>
-		<!-- footer -->
-		<toaster-container toaster-options="{'time-out': 3000}"></toaster-container>
+  <!-- Custom Scripts -->
+  <script type="text/javascript" src="js/deps.min.js"></script>
+  <script type="text/javascript" src="js/app.min.js"></script>
 
-		<!-- jQuery -->
-		<script type="text/javascript" src="vendors/jquery/jquery.min.js"></script>
+  <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js"></script>-->
+</body>
 
-		<!-- Bootstrap -->
-		<script type="text/javascript" src="vendors/bootstrap/bootstrap.min.js"></script>
-
-		<!-- AngularJS -->
-		<script type="text/javascript" src="vendors/angular/angular.min.js"></script>
-		<!-- Angular-Bootstrap -->
-		<script type="text/javascript" src="vendors/angular-ui-bootstrap/ui-bootstrap-tpls.js"></script>
-
-		<!-- NProgress -->
-		<script type="text/javascript" src="vendors/nprogress/nprogress.js"></script>
-
-		<!-- colresizable -->
-		<script type="text/javascript" src="vendors/colresizable/colResizable-1.6.min.js"></script>
-
-		<!-- Custom Scripts -->
-		<script type="text/javascript" src="js/deps.min.js"></script>
-		<script type="text/javascript" src="js/app.min.js"></script>
-
-		<!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js"></script>-->
-	</body>
 </html>
