Split header buttons

--- a/dev/index.html
+++ b/dev/index.html
@@ -24,14 +24,15 @@
         <p class="h3 text-center">MicroStrategy Log Parser<br />
           <small>for Web, Mobile &amp; Kernel XML API server logs</small>
         </p>
-        <ul class="list-inline panel-actions">
-          <li>
+        <!-- Header buttons on the left  -->
+        <ul class="list-inline">
+          <li class=" panel-actions pull-left">
             <div class="btn-group" role="group" aria-label="...">
               <a href="https://github.com/tiagosiebler/MSTRWebLogParser" target="_blank" class="btn btn-default btn-xs" role="button" title="View Repository"><span class="glyphicon glyphicon-globe"></span> GitHub</a>
               <button class="btn btn-default btn-xs" ng-click="viewHelp()" title="Usage Info"><span class="glyphicon glyphicon-question-sign"></span> Help</button>
             </div>
           </li>
-          <li>
+          <li class=" panel-actions pull-right">
             <button class="btn btn-danger btn-xs" ng-click="doReset()" title="Reset Parser"><span class="glyphicon glyphicon-refresh"></span> Reset</button>
           </li>
         </ul>
