--- a/src/index.html
+++ b/src/index.html
@@ -101,6 +101,9 @@
   <script type="text/javascript" src="js/deps.min.js"></script>
   <script type="text/javascript" src="js/app.min.js"></script>
 
+  <!-- JSON->CSV helper -->
+  <script src="https://cdn.jsdelivr.net/npm/json2csv@4.2.1"></script>
+
   <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js"></script>-->
 </body>
 
